--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,17 +49,17 @@ set_target_properties(${PROJECT_NAME}
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" )
     if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0 AND NOT APPLE)
-        target_compile_definitions(${PROJECT_ANME} PRIVATE -DFILESYSTEM_TS)
-        target_link_libraries(stdc++fs)
+        target_compile_definitions(${PROJECT_NAME} PRIVATE -DFILESYSTEM_TS)
+        target_link_libraries(${PROJECT_NAME} PRIVATE stdc++fs)
     elseif(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0 AND APPLE)
-        target_compile_definitions(${PROJECT_ANME} PRIVATE -DFILESYSTEM_TS)
-        target_link_libraries(c++fs)
+        target_compile_definitions(${PROJECT_NAME} PRIVATE -DFILESYSTEM_TS)
+        target_link_libraries(${PROJECT_NAME} PRIVATE c++fs)
     endif()
 endif (CMAKE_CXX_COMPILER_ID MATCHES "Clang" )
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.1)
         target_compile_definitions(${PROJECT_NAME} PRIVATE -DFILESYSTEM_TS)
-        target_link_libraries(stdc++fs)
+        target_link_libraries(${PROJECT_NAME} PRIVATE stdc++fs)
     endif(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.1)
 endif()
